// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders tracker item for active items 1`] = `
<div
  className="trackerContainer"
>
  <a
    className="trackerItem trackerItemActive"
    href="#undefined"
    id="tracker-item-abc"
  >
    <span
      className="text"
    >
      abc
    </span>
  </a>
  <div
    className="separator"
  />
</div>
`;

exports[`renders tracker item for inactive items 1`] = `
<div
  className="trackerContainer"
>
  <a
    className="trackerItem "
    href="#undefined"
    id="tracker-item-abc"
  >
    <span
      className="text"
    >
      abc
    </span>
  </a>
  <div
    className="separator"
  />
</div>
`;
